--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sequelize": "^6.12.0-alpha.1",
     "ssh2": "^1.5.0",
     "ssh2-sftp-client": "^7.1.0",
+    "unzip": "^0.1.11",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
     "xml2js": "^0.4.23"
