--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "date-format": "^3.0.0",
@@ -20,6 +22,8 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "install": "^0.13.0",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.5",
     "node-xlsx": "^0.17.2",
     "sequelize": "^6.12.0-alpha.1",
